<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SIATG</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_perfil_insertar">PerfilInsertarActivity</string>
    <string name="title_activity_perfil_menu">PerfilMenuActivity</string>
    <string name="id_tipo_proy">ID Tipo Proyecto</string>
    <string name="estado">Estado</string>
    <string name="id_perfil">ID Perfil</string>
    <string name="id_grupo_tg">ID Grupo Trabajo de Graduación</string>
    <string name="title_activity_integrante_grupo_menu">Integrante_grupoMenuActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_perfil_eliminar">PerfilEliminarActivity</string>
    <string name="title_activity_perfil_consultar">PerfilConsultarActivity</string>
    <string name="title_activity_perfil_actualizar">PerfilActualizarActivity</string>
    <string name="title_activity_integrante_grupo_insertar">Integrante_grupoInsertarActivity</string>
    <string name="title_activity_integrante_grupo_eliminar">Integrante_grupoEliminarActivity</string>
    <string name="title_activity_integrante_grupo_consultar">Integrante_grupoConsultarActivity</string>
    <string name="title_activity_integrante_grupo_actualizar">Integrante_grupoActualizarActivity</string>
    <string name="title_activity_asesoria_menu">AsesoriaMenuActivity</string>
    <string name="title_activity_asesoria_insertar">AsesoriaInsertarActivity</string>
    <string name="title_activity_asesoria_eliminar">AsesoriaEliminarActivity</string>
    <string name="title_activity_asesoria_consultar">AsesoriaConsultarActivity</string>
    <string name="title_activity_asesoria_actualizar">AsesoriaActualizarActivity</string>
    <string name="id_tg">ID Trabajo de Graduacion</string>
    <string name="tema">Tema</string>
    <string name="opciones">Opciones</string>
    <string name="limpiar">Limpiar</string>
    <string name="carrera">Carrera</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="consultar">Consultar</string>
    <string name="actualizar">Actualizar</string>
    <string name="representante">Representante</string>
    <string name="nota_final">Nota Final</string>
    <string name="id_integrante">ID integrante</string>
    <string name="title_activity_ubicacion_menu">UbicacionMenuActivity</string>
    <string name="title_activity_ubicacion_insertar">UbicacionInsertarActivity</string>
    <string name="defensa_menu">Menu Defensa</string>
    <string name="asistencia_menu">Menu Asistencia</string>
    <string name="ubicacion_menu">Menu Ubicacion</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="id_ubicacion">Id Ubicacion</string>
    <string name="local">Local</string>
    <string name="descripcion_ub">Descripcion</string>
    <string name="id_defensa">Id Defensa</string>
    <string name="id_ubicacion_def">Id Ubicacion</string>
    <string name="id_etapa">Id Etapa</string>
    <string name="hora">Hora</string>
    <string name="fecha">Fecha</string>
    <string name="id_asistencia">Id Asistencia</string>
    <string name="id_asesoria">Id Asesoria</string>
    <string name="estado_as">Estado</string>
    <string name="title_activity_ubicacion_consultar">UbicacionConsultarActivity</string>
    <string name="title_activity_ubicacion_actualizar">UbicacionActualizarActivity</string>
    <string name="title_activity_ubicacion_eliminar">UbicacionEliminarActivity</string>
    <string name="title_activity_asistencia_menu">AsistenciaMenuActivity</string>
    <string name="title_activity_asistencia_insertar">AsistenciaInsertarActivity</string>
    <string name="title_activity_asistencia_consultar">AsistenciaConsultarActivity</string>
    <string name="title_activity_asistencia_actualizar">AsistenciaActualizarActivity</string>
    <string name="title_activity_asistencia_eliminar">AsistenciaEliminarActivity</string>
    <string name="title_activity_defensa_menun">DefensaMenunActivity</string>
    <string name="title_activity_defensa_menu">DefensaMenuActivity</string>
    <string name="title_activity_defensa_insertar">DefensaInsertarActivity</string>
    <string name="title_activity_defensa_consultar">DefensaConsultarActivity</string>
    <string name="title_activity_defensa_actualizar">DefensaActualizarActivity</string>
    <string name="title_activity_defensa_eliminar">DefensaEliminarActivity</string>
    <string name="id_tipo_proyecto">Id Tipo Proyecto</string>
    <string name="nombre_pry">Nombre Proyecto</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="nombre_etapa">Nombre Etapa</string>
    <string name="descripcion_et">Descripción Etapa</string>
    <string name="porcentaje_et">Porcentaje Etapa</string>
    <string name="hora_asesoria">Hora</string>
    <string name="num_asesoria">Numero Asesoria</string>
    <string name="fecha_asesoria">Fecha</string>
    <string name="observacion_a">Observaciones</string>
    <string name="title_activity_integrantegrupo_menu">IntegrantegrupoMenuActivity</string>
    <string name="title_activity_tipo_proyecto_menu_activity">TipoProyectoMenuActivityActivity</string>
    <string name="title_activity_tipo_proyecto_menu">TipoProyectoMenuActivity</string>
    <string name="title_activity_tipo_proyecto_insertar">TipoProyectoInsertarActivity</string>
    <string name="title_activity_tipo_proyecto_consultar">TipoProyectoConsultarActivity</string>
    <string name="title_activity_tipo_proyecto_actualizar">TipoProyectoActualizarActivity</string>
    <string name="title_activity_tipo_proyecto_eliminar">TipoProyectoEliminarActivity</string>
    <string name="title_activity_actualizar_asesoria">ActualizarAsesoriaActivity</string>
    <string name="title_activity_revisionperfil_insertar">Agregar Revision de Perfil</string>
    <string name="title_activity_revisionperfil_mostrar">Mostrar Revision de Perfil</string>
    <string name="title_activity_revisionperfil_modificar">Modificar Revision de Perfil</string>
    <string name="title_activity_revisionperfil_eliminar">Eliminar Revision de Perfil</string>
    <string name="title_activity_docenteasignado_insertar">Asignar Docente</string>
    <string name="title_activity_docenteasignado_mostrar">Mostrar Docente Asignado</string>
    <string name="title_activity_docenteasignado_modificar">Modificar Docente Asignado</string>
    <string name="title_activity_docenteasignado_eliminar">Eliminar Docente Asignado</string>
    <string name="Id_revisionperfilJC">Id Revision Perfil</string>
    <string name="Id_perfilJC">Codigo Perfil</string>
    <string name="fecha_revJC">Fecha revision</string>
    <string name="Observacionrev">Observacion</string>
    <string name="Id_docenteJC">Codigo Docente</string>
    <string name="Porcentaje">Porcentaje</string>
    <string name="Modalidad">Modalidad</string>
    <string name="title_activity_revisionperfil_menu">Menu Revision de Perfil</string>
    <string name="title_activity_docenteasignado_menu">Menu Docente Asignar</string>
    <string name="title_activity_docente_menu">Menu Docente</string>
    <string name="title_activity_docente_insertar">Agregar Docente</string>
    <string name="Id_docenteM">Codigo Docente</string>
    <string name="NombreM">Nombre</string>
    <string name="ApellidoM">Apellido</string>
    <string name="title_activity_grupo_tgmenu">Menu Grupo TG</string>
    <string name="title_activity_docente_consultar">Consultar Docente</string>
    <string name="title_activity_docente_actualizar">Actualizar Activity</string>
    <string name="title_activity_grupo_tginsertar">Agregar Grupo TG</string>
    <string name="title_activity_grupo_tgactualizar">Actualizar Grupo TG</string>
    <string name="title_activity_grupo_tgconsultar">Consultar Grupo TG</string>
    <string name="id_docente">ID Docente</string>
    <string name="can_perfiles_apr">Perfiles Aprobados</string>
    <string name="can_perfiles_rep">Perfiles Reprobados</string>
    <string name="correo_d">Correo</string>
    <string name="nombres_d">Nombre</string>
    <string name="apellidos_d">Apellido</string>
    <string name="title_activity_docente_eliminar">Eliminar Docente</string>
    <string name="anio">Anio</string>
    <string name="carnet">Carnet</string>
    <string name="nota_ase">Nota ASE</string>
    <string name="nota_obs">Nota OBS</string>
    <string name="title_activity_grupo_tgeliminar">Eliminar GrupoTG</string>
    <string name="title_activity_detalle_nota_menu">DetalleNotaMenuActivity</string>
    <string name="title_activity_detalle_nota_insertar">DetalleNotaInsertarActivity</string>
    <string name="title_activity_detalle_nota_consultar">DetalleNotaConsultarActivity</string>
    <string name="title_activity_detalle_nota_actualizar">DetalleNotaActualizarActivity</string>
    <string name="title_activity_detalle_nota_eliminar">DetalleNotaEliminarActivity</string>
    <string name="title_activity_alumno_menu">AlumnoMenuActivity</string>
    <string name="title_activity_alumno_insertar">AlumnoInsertarActivity</string>
    <string name="correo_a">correo</string>
    <string name="nombres_a">Nombres</string>
    <string name="apellidos_a">Apellidos</string>
    <string name="direccion">Direccion</string>
    <string name="telefono_a">Telefono</string>
    <string name="title_activity_consultar_alumno">ConsultarAlumnoActivity</string>
    <string name="title_activity_alumno_consultar">AlumnoConsultarActivity</string>
    <string name="title_activity_alumno_actualizar">AlumnoActualizarActivity</string>
    <string name="title_activity_alumno_eliminar">AlumnoEliminarActivity</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="txtAltitud">Altitud</string>
    <string name="txtLatitud">Latitud</string>
    <string name="txtLongitud">Longitud</string>
    <string name="txtDireccion">Direccion</string>
    <string name="btnObtenerDatos">Obtener Datos Direccion</string>
    <string name="title_activity_zxing_demo">ZXingDemoActivity</string>
    <string name="hello">Hello World, ZXingDemoActivity!</string>
    <string name="title_activity_logo">Logo</string>
    <string name="title_activity_web_service_hosting">WebServiceHostingActivity</string>

</resources>