<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:paddingTop="30dip"
android:stretchColumns="1" >
<TableRow>
<TextView android:text="@string/id_defensa"/>
<EditText
android:id="@+id/editId_defensa"
android:inputType="text"
android:maxLength="7" />
</TableRow>
<TableRow>
<TextView android:text="@string/id_tg"/>
<EditText
android:id="@+id/editId_tg"
android:inputType="text"
android:maxLength="7" />
</TableRow>
<TableRow>
<TextView android:text="@string/id_ubicacion"/>
<EditText
android:id="@+id/editId_ubicacion"
android:inputType="text"
android:maxLength="7" />
</TableRow>
<TableRow>
<TextView android:text="@string/id_etapa"/>
<EditText
android:id="@+id/editId_etapa"
android:inputType="text"
android:maxLength="7" />
</TableRow>
<TableRow>
<TextView android:text="@string/hora" />
<EditText
android:id="@+id/editHora"
android:inputType="text"
android:maxLength="15" />
</TableRow>
<TableRow>
<TextView android:text="@string/fecha" />
<EditText
android:id="@+id/editFecha"
android:inputType="text"
android:maxLength="15" />
</TableRow>

<TableRow>
<TextView android:text="@string/opciones" />
</TableRow>
<TableRow>
<Button
android:onClick="insertarDefensa"
android:text="@string/insertar" />
<Button
android:onClick="limpiarTexto"
android:text="@string/limpiar" />
</TableRow>
</TableLayout>