<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="30dip"
	android:stretchColumns="1" >

	<TableRow>
		<TextView android:text="@string/Id_revisionperfilJC"/>
		<EditText
			android:id="@+id/editIdevisionperfilJC"
			android:inputType="text"
			android:maxLength="10" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/Id_perfilJC"/>
		<EditText
			android:id="@+id/editIdperfilJC"
			android:inputType="text"
			android:maxLength="7" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/Id_docenteJC"/>
		<EditText
			android:id="@+id/editIdJC"
			android:inputType="text"
			android:maxLength="7" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/fecha_revJC"/>
		<EditText
			android:id="@+id/editFecharevJC"
			android:inputType="text"
			android:maxLength="10" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/Observacionrev" />
		<EditText
			android:id="@+id/editObservacionrevJC"
			android:inputType="text"
			android:maxLength="30" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/opciones" />
	</TableRow>
	<TableRow>
		<Button
			android:onClick="insertarRevisionperfil"
			android:text="@string/insertar" />
		<Button
			android:onClick="limpiarTexto"
			android:text="@string/limpiar" />
	</TableRow>
</TableLayout>