<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:paddingTop="30dip"
android:stretchColumns="1" >
<TableRow>
<TextView android:text="@string/id_defensa"/>
<EditText
android:id="@+id/editId_defensa"
android:inputType="text"
android:maxLength="7" />
</TableRow>
<TableRow>
<TextView android:text="@string/carnet"/>
<EditText
android:id="@+id/editCarnet"
android:inputType="text"
android:maxLength="7" />
</TableRow>
<TableRow>
<TextView android:text="@string/nota_ase"/>
<EditText
android:id="@+id/editNota_ase"
android:inputType="number"
android:maxLength="7" />
</TableRow>
<TableRow>
<TextView android:text="@string/nota_obs"/>
<EditText
android:id="@+id/editNota_obs"
android:inputType="number"
android:maxLength="7" />
</TableRow>


<TableRow>
<TextView android:text="@string/opciones" />
</TableRow>
<TableRow>
<Button
android:onClick="insertarDetalleNota"
android:text="@string/insertar" />
<Button
android:onClick="limpiarTexto"
android:text="@string/limpiar" />
</TableRow>
</TableLayout>