<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <TableRow>
        <TextView android:text="@string/id_perfil"/>
        <EditText
            android:id="@+id/editId_perfil"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/id_grupo_tg" />
        <EditText
            android:id="@+id/editId_grupo_tg"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/id_tg" />
        <EditText
            android:id="@+id/editId_tg"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/id_tipo_proy" />
        <EditText
            android:id="@+id/editId_tipo_proy"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    
    <TableRow>
        <TextView android:text="@string/tema" />
        <EditText
            android:id="@+id/editTema"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    
    <TableRow>
        <TextView android:text="@string/estado" />
        <EditText
            android:id="@+id/editEstado"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    
    <TableRow>
        <TextView android:text="@string/carrera" />
        <EditText
            android:id="@+id/editCarrera"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    
 	<TableRow>
    		 <TextView android:text="@string/opciones" />
    </TableRow>
    
    <TableRow>
        <Button
            android:onClick="insertarPerfil"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>
