<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="10dip"
	android:stretchColumns="1" >
	<TableRow>
		<TextView android:text="@string/Id_docenteJC" />
		<EditText
			android:id="@+id/editIdJC"
			android:inputType="text"
			android:maxLength="7" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/Porcentaje" />
		<EditText
			android:id="@+id/editFloatJC"
			android:inputType="number"
			android:maxLength="2" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/Modalidad" />
		<EditText
			android:id="@+id/editModalidadJC"
			android:inputType="text"
			android:maxLength="30" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/opciones" />
	</TableRow>
	<TableRow>
		<Button
			android:onClick="actualizarDocenteasignado"
			android:text="@string/actualizar" />
		<Button
			android:onClick="limpiarTexto"
			android:text="@string/limpiar" />
	</TableRow>
</TableLayout>