<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:paddingTop="10dip"
android:stretchColumns="1" >
<TableRow>
<TextView android:text="@string/id_ubicacion" />
<EditText
	android:id="@+id/editId_ubicacion"
	android:inputType="text"
	android:maxLength="7" />
</TableRow>
	<TableRow>
		<TextView android:text="@string/local" />

		<EditText
		android:id="@+id/editLocal"
		android:inputType="text"
		android:maxLength="50" />
	</TableRow>
<TableRow>
    
<TextView android:text="@string/descripcion_ub" />
	<EditText
	android:id="@+id/editDescripcion_ub"
	android:inputType="text"
	android:maxLength="50" />
</TableRow>

<TableRow>
<Button
	android:onClick="actualizarUbicacion"
	android:text="@string/actualizar" />
</TableRow>

<TableRow>
<Button
	android:onClick="limpiarTexto"
	android:text="@string/limpiar" />
</TableRow>
</TableLayout>