<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:paddingTop="10dip"
android:stretchColumns="1" >
<TableRow>
<TextView android:text="@string/id_asistencia" />
<EditText
	android:id="@+id/editId_asistencia"
	android:inputType="text"
	android:maxLength="7" />
</TableRow>
	<TableRow>
		<TextView android:text="@string/id_asesoria" />

		<EditText
		android:id="@+id/editId_asesoria"
		android:inputType="text"
		android:maxLength="7" />
	</TableRow>
<TableRow>
    
<TextView android:text="@string/estado_as" />
	<EditText
	android:id="@+id/editEstado_as"
	android:inputType="text"
	android:maxLength="1" />
</TableRow>

<TableRow>
<Button
	android:onClick="actualizarAsistencia"
	android:text="@string/actualizar" />
</TableRow>

<TableRow>
<Button
	android:onClick="limpiarTexto"
	android:text="@string/limpiar" />
</TableRow>
</TableLayout>