<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="30dip"
    android:stretchColumns="1" >

    <TableRow>
        <TextView android:text="@string/id_tipo_proyecto"/>
        <EditText 
        	android:id="@+id/editId_tipo_proy"
        	android:inputType="text"
        	android:maxLength="7" />
    </TableRow>
    <TableRow >
    	<TextView android:text="@string/nombre_pry"/>
    	<EditText 
    	android:id="@+id/editNombre_pry"
    	android:inputType="text"
    	android:maxLength="50"    
        
    	/>
    </TableRow>
    
    <TableRow >
        <TextView  android:text="@string/opciones"/>
    </TableRow>
    <TableRow>
        <Button 
            android:onClick="insertarTipoProyecto"
            android:text="@string/insertar"/>
        <Button 
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"/>
    </TableRow>
    
</TableLayout>