<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >

    <TableRow>

        <TextView android:text="@string/representante" />

        <EditText
            android:id="@+id/editRepresentante"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/nota_final" />

        <EditText
            android:id="@+id/editNota_final"
            android:inputType="number"
            android:maxLength="4" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/id_integrante" />

        <EditText
            android:id="@+id/editId_integrante"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/id_grupo_tg" />

        <EditText
            android:id="@+id/editId_grupo_tg"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    
      
    
    

    <TableRow>

        <Button
            android:onClick="actualizarIntegrante"
            android:text="@string/actualizar" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>
