<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/id_defensa"/>
<EditText
	android:id="@+id/editId_defensa"
	android:layout_width="200dp"
	android:layout_height="wrap_content"
	android:inputType="text"
	android:maxLength="7"/>

<LinearLayout
	android:id="@+id/linearLayout1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" >
<Button
	android:id="@+id/botonConsultar"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/consultar"
	android:onClick="consultarDetalleNota"/>
<Button
	android:id="@+id/botonLimpiar"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/limpiar"
	android:onClick="limpiarTexto"/>
</LinearLayout>
<TextView
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/carnet"/>
<EditText
	android:id="@+id/editCarnet"
	android:layout_width="200dp"
	android:layout_height="wrap_content"
	android:inputType="text"
	android:maxLength="7"/>
<TextView
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/nota_ase"/>
<EditText
	android:id="@+id/editNota_ase"
	android:layout_width="200dp"
	android:layout_height="wrap_content"
	android:inputType="number"
	android:maxLength="7"/>
<TextView
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/nota_obs"/>
<EditText
	android:id="@+id/editNota_obs"
	android:layout_width="200dp"
	android:layout_height="wrap_content"
	android:inputType="number"
	android:maxLength="7"/>

</LinearLayout>